packages/melody-compiler/__tests__/__fixtures__/error/nonbreakable_space.template
{{ 'success_msg' | sort }}
